Bug 120677 - Freezes when I open a ODT document
Summary: Freezes when I open a ODT document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.2.1 release
Hardware: All All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0 target:6.1.4 target:26.8.0
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks:
 
Reported: 2018-10-18 16:01 UTC by Fran
Modified: 2026-02-07 11:15 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT file with which LibreOffice freezes. (347.34 KB, application/vnd.oasis.opendocument.text)
2018-10-18 16:03 UTC, Fran
Details
A .DOC freezing LO (memory consumption grows indefinitely) (2.44 MB, application/msword)
2018-11-12 06:45 UTC, Mike Kaganski
Details
tdf#120677: Absolutely minimal reproducer (1.31 KB, application/vnd.oasis.opendocument.text)
2018-11-12 10:08 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fran 2018-10-18 16:01:40 UTC
Description:
LibreOffice freezes when I try to open an ODT document. No load or error message appears, it just freezes and I have to force close. I have tried version 6.1.2 (x64) and RC 6.1.3.1 (x64), and both have this problem. With OpenOffice I can open this same document perfectly.

Steps to Reproduce:
1. Open ODT document

Actual Results:
Crash

Expected Results:
Open document


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Versión: 6.1.3.1 (x64)
Id. de compilación: a9670562c26181ec3afbe381c9ff499ae88c98b7
Subprocs. CPU: 8; SO: Windows 10.0; Repres. IU: GL; 
Configuración regional: es-ES (es_ES); Calc: CL
Comment 1 Fran 2018-10-18 16:03:54 UTC
Created attachment 145807 [details]
ODT file with which LibreOffice freezes.
Comment 2 Oliver Brinzing 2018-10-18 16:36:36 UTC
reproduced with

Version: 6.1.3.1 (x64)
Build-ID: a9670562c26181ec3afbe381c9ff499ae88c98b7
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: 

and

Version: 6.2.0.0.alpha0+ (x64)
Build ID: b9234b43ed259a10cf9077032af0f79740f01d8b
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); Calc: threaded

100% cpu for 1 core and memory goes up to ...
seems to be a memory leak

but not reproducible with:

Version: 5.4.7.2
Build-ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU-Threads: 4; BS: Windows 6.2; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: single

AOO 4.1.5
Comment 3 Oliver Brinzing 2018-10-18 16:55:24 UTC
and not reproducible with

Version: 6.0.7.1 (x64)
Build-ID: 5d2cb2a5dd04fe174b336488731eb50bbb5faed3
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group
Comment 4 Oliver Brinzing 2018-10-18 17:29:07 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2018-10-29 18:35:26 UTC
Also reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 19a0698079fbba36646a2d06eaec3a7fde60b2f5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 6 Xisco Faulí 2018-10-29 18:40:49 UTC
(In reply to Oliver Brinzing from comment #4)
> could someone from qa team please verify, 
> cause this is my first bisect ;-).
> 
> Bisected with: bibisect-win32-6.1
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=0be3db28a4db4d2c81a5cb2edd48711eec55b51b
> 

I do confirm the commit mentioned above is the one introducing this regression.

Adding Cc: to Vitaliy Anderson
Comment 7 Vitaliy 2018-10-30 09:00:31 UTC
I try to fix it soon
Comment 8 Mike Kaganski 2018-11-12 06:45:36 UTC
Created attachment 146552 [details]
A .DOC freezing LO (memory consumption grows indefinitely)

See also https://ask.libreoffice.org/en/question/172013/i-was-upgrade-liberoffice-from-4-to-61ver/ (which is the source of the attached document). Bibisected to this.
Comment 9 Mike Kaganski 2018-11-12 10:08:20 UTC
Created attachment 146559 [details]
tdf#120677: Absolutely minimal reproducer

Vitaliy: hope this could help you.
Comment 10 Mike Kaganski 2018-11-12 12:30:57 UTC
We agreed with Vitaliy that I take this: https://gerrit.libreoffice.org/63290
Comment 11 Commit Notification 2018-11-12 19:03:20 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4bb28ad217ea9d6511b6921dcd3d28328edcb4d6%5E%21

tdf#120677: restore treatment of blanks in SwTextGuess::Guess

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2018-11-13 08:58:55 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 21b0bd63a41bda1153bb6173ec23ecdd13353999
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Mike Kaganski, Thanks for fixing this!!
Comment 13 Commit Notification 2018-11-19 15:04:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/7c7f46faa213d9c20bf5cebcc72b0f5dc86b0248%5E%21

tdf#120677: restore treatment of blanks in SwTextGuess::Guess

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2026-02-07 11:15:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e3c068cb190e6cf04a49f9984f984d5ef72f9d9a

tdf#167946: reimplement the fix for tdf#120677

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.