tdf#120677: restore treatment of blanks in SwTextGuess::Guess

Before commit 0be3db28a4db4d2c81a5cb2edd48711eec55b51b, all non-breakable
spaces were converted to plain spaces in SwTextSlot::SwTextSlot (see
pInf->SetText call there). The mentioned commit has changed that to allow
differentiating non-breakable spaces from other types of spaces (related
to the fix of tdf#115067). This broke following processing of the NBSPs
when they don't fit to line, causing infinite layout loop leading to OOM.

This allows to restore old behavior to not call the break iterator for
NBSP by explicitly checking for it.

Change-Id: I36ab06abb66bbe65a5fc542c41e816a9f20a2dcf
Reviewed-on: https://gerrit.libreoffice.org/63290
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 4bb28ad217ea9d6511b6921dcd3d28328edcb4d6)
Reviewed-on: https://gerrit.libreoffice.org/63304
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>